# simcore

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  Makefile.bak  Makefile2  PlotDiffusion.ipynb  PlotPDF.ipynb  README  README.md  Singularity  add_centrosome.yaml  anchor_ds_insert.yaml  ar_bench.csv  argon.yaml  argon1024_nograph.yaml  argon256_nograph.yaml  argon4096_nograph.yaml  argon_nograph.yaml  argon_pot.yaml  br_bead_insert.yaml  ci.sh  cilia.yaml  cilia_bundle.yaml  cmake.sh  create_pairs.cpp  crosslink_filament.yaml  custom_filament.yaml  filament.yaml  filament_analysis.cpp  filament_crossing.yaml  filament_crossing_100.yaml  filament_crossing_2.yaml  filament_crossing_20.yaml  filament_crossing_25.yaml  install.sh  (+16 more)
.CMake_Modules/: FindGLEW.cmake  GetGitRevisionDescription.cmake
.github/: pull_request_template.md
.old_objs/: argon.cpp  bead.h  br_simple_rod.cpp  br_walker.cpp  kmc_engine.cpp  md_kmc_bead.h  neon.h  spindle_pole_body.cpp  xlink.cpp  xlink_harmonic.cpp  xlink_kmc.cpp  xlink_kmc.h
.old_src/: dynamic_instability.cpp.old  interaction_engine.cpp.old  interaction_engine.h.old  kmc_base.h.old  particle_tracking.cpp  test_helpers.h  test_manager.cpp  test_module_base.h
SimCOREXcode.xcodeproj/: project.pbxproj
analysis/: GNFAnalysis.ipynb  PlotThetas.ipynb  SoftShoulderPlot.ipynb  Spiral.ipynb  crossing_analysis.ipynb  flockAnalysis.ipynb  kinesin1_force_velocity.ipynb  localOrder.ipynb  msd_analysis.ipynb  msd_posit.ipynb  mse2e_data.pkl  orientationCorrelation.ipynb  orientationCorrelationAnalysis.ipynb  polarOrder.ipynb  sc_analysis.ipynb  simcore_tools.py  spiralAnalysis.ipynb  spiral_analyses.ipynb  test_analysis.py  thetaAnalysis.ipynb
config/: default_config.yaml
deprecated/: allocate.cpp  boundary_wca.cpp  boundary_wca_tip.cpp  boundary_wca_tip.h  br_rod.h  dynamic_instability.cpp  force_brute.cpp  force_cell.h  force_microcell.cpp  force_neighborlist_cells.cpp  force_neighborlist_cells.h  force_substructure_base.cpp  force_substructure_base.h  interaction_engine.cpp  lookup_table.cpp  microcell_list.cpp  neighbor_list_ap.h  neighbor_list_cells.cpp  neighbor_list_cells.h  output_manager.cpp  output_manager.h  particle_engine.h  potential_manager.cpp  space_old.cpp  tracking_base.cpp  tracking_scheme_nlap.cpp  wca.h
docker/: Dockerfile  Dockerfile-ubuntu  Dockerfile_base  Dockerfile_experimental  Dockerfile_ubuntu  docker-compose.yml  docker_build.sh
docs/: CMakeLists.txt  Doxyfile  mainpage.md
examples/: active_xlinked_params.yaml  add_bead_spring.yaml  assay_3d_insert.yaml  explicit_driven_params.yaml  explicit_test_params.yaml  filament_crossing.yaml  filament_crossing_101.yaml  filament_crossing_13.yaml  io_fil_00.yaml  io_fil_03.yaml  io_fil_04.yaml  io_fil_08.yaml  io_fil_11.yaml  io_fil_16.yaml  io_fil_17.yaml  optical_trap.yaml  spindle_params.yaml  spindle_test_params.yaml  tangling_params.yaml
notebooks/: MSE2E.ipynb  PlotPDF.ipynb  SummitJobRandomizer.ipynb  diffusion_from_posits.ipynb  flockAnalysis.ipynb  sc_analysis.ipynb  simcore_analysis_static.ipynb  simcore_renamer.ipynb  simcore_renamer.py  simcore_tools.py  specReader.ipynb
old_objs/: argon.h  kmc_engine.h  xlink_head.h
old_src/: kmc_engine.h.old  potential_manager.h.old  test_manager.h  test_potential.h  test_xlink_kmc.cpp  tracking_allpairs.cpp  uberengine.h.old  xlink_kmc.cpp.old
params/: 2d_spherocylinders.config.yaml  2d_spherocylinders.kmc.yaml  2d_spherocylinders.pot.yaml  2d_spherocylinders.yaml  add_filament.yaml  add_spindle.yaml  argon.yaml  argon1024_nograph.yaml  argon256_nograph.yaml  argon4096_nograph.yaml  argon_pot.yaml  argonneon.yaml  attraction_test.kmc.yaml  attraction_test.yaml  bead_crossing.yaml  bulk_simulation.config.yaml  bulk_simulation.kmc.yaml  bulk_simulation.pot.yaml  bulk_simulation.yaml  bundle.yaml  dy_rods.config.yaml  dy_rods.kmc.yaml  fakeargon.yaml  filament_crossing_10.yaml  filament_crossing_101_wall_bcs.yaml  filament_int.config.yaml  filament_int.pot.yaml  filament_test.config.yaml  filament_test.pot.yaml  filament_test.yaml  hard_rods.config.yaml  hard_rods.kmc.yaml  hard_rods.pot.yaml  hard_rods.yaml  hard_spheres.config.yaml  hard_spheres.pot.yaml  hard_spheres.yaml  hardrods.yaml  hardrods_pot.yaml  hardspheres.yaml  (+48 more)
scripts/: MSE2E.ipynb  Makefile_home  Makefile_summit  PlotDiffusion.ipynb  PlotDiffusion.py  PlotDiffusion2.ipynb  PlotDiffusionPosit.ipynb  (+35 more)
simcore/simulation/executable/: CMakeLists.txt  CMakeLists.txtaa  simcore_main.cpp  xaa
src/: CMakeLists.txt  Makefile  adj_cell_list.cpp  adj_cell_list.h  analysis.cpp  analysis_manager.h  anchor.cpp  anchor_list_generic.h  argon.cpp  argon.h  auxiliary.h  bead.h  bead_spring.cpp  bead_spring.h  bond.cpp  bond.h  boundary_wca.cpp  boundary_wca.h  boundary_wca_tip.cpp  boundary_wca_tip.h  br_bead.cpp  br_bead.h  br_bead_species.cpp  br_dimer.cpp  br_dimer.h  br_rod.cpp  br_rod.h  br_simple_rod.cpp  br_simple_rod.h  br_walker.cpp  br_walker.h  brownian_bead.cpp  brownian_bead.h  brownian_dimer.cpp  brownian_dimer.h  cell.cpp  cell_list.cpp  cell_list.h  cell_list_old.h  centrosome.cpp  (+238 more)
src/analysis/: CMakeLists.txt  van_hove_analysis.cpp
src/configurator/: configurator.cpp
src/executable/: CMakeLists.txt  main.cpp
src/simcore/: CMakeLists.txt  anchor.cpp  anchor.h  auxiliary.h  bond.cpp  bond.h  br_bead.cpp  br_bead.h  cpu_time.cpp  crosslink.cpp  crosslink.h  crosslink_manager.cpp  crosslink_manager.h  definitions.h  error_exit.cpp  filament.cpp  filament.h  filament_species.cpp  graphics.cpp  graphics.h  helpers.h  interaction.h  interaction_engine.cpp  interaction_engine.h  kmcx_test.h  max_force_potential.h  mesh.cpp  mesh.h  minimum_distance.cpp  minimum_distance.h  motor.h  neighbor_list.h  object.cpp  object.h  output_manager.cpp  parameters.h  parse_flags.h  parse_params.h  parse_params_body.h  particle_tracker.cpp  (+21 more)
src/simcore_config/: CMakeLists.txt  simcore_config.cpp
tests/: CMakeLists.txt  simulation_manager_test.hpp  test_params.yaml  test_simcore.cpp
tests/src/: config_params.yaml
(+329 files in other folders)
